--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,10 @@
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
         "phpunit/phpunit": "^10.1",
-        "spatie/laravel-ignition": "^2.0"
+        "spatie/laravel-ignition": "^2.0",
+        "spatie/laravel-multitenancy": "^3.2",
+        "spatie/laravel-permission": "^6.7",
+        "spatie/laravel-translatable": "^6.7"
     },
     "autoload": {
         "psr-4": {
