--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,12 @@
     "require": {
         "php": "^8.1",
         "guzzlehttp/guzzle": "^7.2",
+        "intervention/image": "^3.6",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "simplesoftwareio/simple-qrcode": "^4.2",
+        "stripe/stripe-php": "^14.9"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
